Atualizando body no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Digital Innovation ONE</title>
   </head>
   <body>
-    Digital Innovation one meu amigo
+    Digital Innovation one - Aula de GIT
 
   </body>
 </html>
